syntax = "proto3";

package student_service;

// Student 对象定义
message Student {
    int64 id = 1;
    string name = 2;
    int32 age = 3;
    string gender = 4;
    float score = 5;
}

// 客户端 CRUD 请求与响应
message CreateStudentRequest {
    Student student = 1;
}

message GetStudentRequest {
    int64 id = 1;
}

message UpdateStudentRequest {
    Student student = 1;
}

message DeleteStudentRequest {
    int64 id = 1;
}

message StudentResponse {
    bool success = 1;
    string message = 2;
    Student student = 3;
}

service StudentService {
    // 客户端业务接口
    rpc CreateStudent(CreateStudentRequest) returns (StudentResponse);
    rpc GetStudent(GetStudentRequest) returns (StudentResponse);
    rpc UpdateStudent(UpdateStudentRequest) returns (StudentResponse);
    rpc DeleteStudent(DeleteStudentRequest) returns (StudentResponse);
}
